--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ dependencies:
   rust_lib_mangayomi:
     path: rust_builder
   pseudom: ^1.0.1
-  rhttp: ^0.6.0
+  cupertino_http: ^1.5.0
 
 dependency_overrides:
   http: ^1.2.1
